fixed event code and button overlap (hopefully)

--- a/public/globalStyle.css
+++ b/public/globalStyle.css
@@ -23,10 +23,10 @@ button:hover {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* width: 5vh; */
-  /* height: 5vh; */
+  width: 5vh; 
+  height: 5vh;
   position: absolute;
-  bottom: 5vh;
+  bottom: 1vh;
   right: calc(55vw / 2 - 10vw);
   padding: 20px 40px;
   margin-top: 10px;
@@ -37,10 +37,10 @@ button:hover {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* width: 5vh; */
-  /* height: 5vh; */
+  width: 5vh;
+   height: 5vh;
   position: absolute;
-  bottom: 5vh;
+  bottom: 1vh;
   left: calc(55vw / 2 - 10vw);
   padding: 20px 40px;
   margin-top: 10px;
